--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,7 @@ body {
   background-image: url('pexels-piccinng-3052361.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  margin: 0; /* Optional - To remove default body margin */
+ padding: 0; /* Optional - To remove default body padding */
+}
 }
