--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 body {
-  background-image: url('pexels-piccinng-3052361.jpg');
+  background-image: url('anime.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0; /* Optional - To remove default body margin */
